Page categories demo, Uranus moon pages, Earth and Galaxy pages expanded, minor edits

--- a/_includes/tocearth.html
+++ b/_includes/tocearth.html
@@ -22,10 +22,10 @@
             <a href="#Shape">Shape</a>
         </li>
         <li>
-            <a href="#Surface">Surface</a>
+            <a href="#Interior">Interior</a>
         </li>
         <li>
-            <a href="#Interior">Interior</a>
+            <a href="#Surface">Surface</a>
         </li>
         <li>
             <a href="#Atmosphere">Atmosphere</a>
@@ -37,6 +37,17 @@
 </li>
 <li>
     <a href="#Moon">Moon</a>
+</li>
+<li>
+    <a href="#SpaceExploration">Space exploration</a>
+    <ul class="subtoc">
+        <li>
+            <a href="#SpaceRace">Space Race</a>
+        </li>
+        <li>
+            <a href="#ISSAndSpaceTelescopes">ISS and space telescopes</a>
+        </li>
+    </ul>
 </li>
 <li>
     <a href="#ExternalLinks">External links</a>
