--- a/_includes/tocgalaxy.html
+++ b/_includes/tocgalaxy.html
@@ -1,6 +1,9 @@
-<!--<li>
+<li>
     <a href="#Formation">Formation</a>
-</li>-->
+</li>
+<li>
+    <a href="#Classification">Classification</a>
+</li>
 <li>
     <a href="#ExternalLinks">External links</a>
 </li>
