Category for moons, Mars moon pages, expanded Sun page, (exo)planet pages

--- a/_includes/tocexoplanet.html
+++ b/_includes/tocexoplanet.html
@@ -1,5 +1,19 @@
 <li>
+    <a href="#Discovery">Discovery</a>
+</li>
+<li>
     <a href="#Naming">Naming</a>
+</li>
+<li>
+    <a href="#ExoplanetCategorization">Exoplanet categorization</a>
+    <ul class="subtoc">
+        <li>
+            <a href="#BySize">By size</a>
+        </li>
+        <li>
+            <a href="#ByOrbit">By orbit</a>
+        </li>
+    </ul>
 </li>
 <li>
     <a href="#DetectionMethods">Detection methods</a>
