--- a/_includes/tocplanet.html
+++ b/_includes/tocplanet.html
@@ -2,6 +2,20 @@
     <a href="#DiscoveryOfThePlanets">Discovery of the planets</a>
 </li>
 <li>
+    <a href="#Formation">Formation</a>
+</li>
+<li>
+    <a href="#Classification">Classification</a>
+    <ul class="subtoc">
+        <li>
+            <a href="#InTheSolarSystem">In the Solar System</a>
+        </li>
+        <li>
+            <a href="#ExoplanetCategories">Exoplanet categories</a>
+        </li>
+    </ul>
+</li>
+<li>
     <a href="#PlanetsOfTheSolarSystem">Planets of the Solar System</a>
     <ul class="subtoc">
         <li>
