--- a/_includes/tocsun.html
+++ b/_includes/tocsun.html
@@ -2,5 +2,34 @@
     <a href="#Formation">Formation</a>
 </li>
 <li>
+    <a href="#RotationAndMovement">Rotation and movement</a>
+</li>
+<li>
+    <a href="#PhysicalCharacteristics">Physical characteristics</a>
+    <ul class="subtoc">
+        <li>
+            <a href="#Size">Size</a>
+        </li>
+        <li>
+            <a href="#InternalStructure">Internal structure</a>
+        </li>
+        <li>
+            <a href="#Atmosphere">Atmosphere</a>
+        </li>
+        <li>
+            <a href="#Heliosphere">Heliosphere</a>
+        </li>
+        <li>
+            <a href="#MagneticActivity">Magnetic activity</a>
+        </li>
+    </ul>
+</li>
+<li>
+    <a href="#EarlyObservations">Early observations</a>
+</li>
+<li>
+    <a href="#Exploration">Exploration</a>
+</li>
+<li>
     <a href="#ExternalLinks">External links</a>
 </li>
