--- a/_includes/catplanets.html
+++ b/_includes/catplanets.html
@@ -1,27 +1,29 @@
-<p>Planets</p>
-<ul>
-    <li>
-        <a href="mercury.html">Mercury</a>
-    </li>
-    <li>
-        <a href="venus.html">Venus</a>
-    </li>
-    <li>
-        <a href="earth.html">Earth</a>
-    </li>
-    <li>
-        <a href="mars.html">Mars</a>
-    </li>
-    <li>
-        <a href="jupiter.html">Jupiter</a>
-    </li>
-    <li>
-        <a href="saturn.html">Saturn</a>
-    </li>
-    <li>
-        <a href="uranus.html">Uranus</a>
-    </li>
-    <li>
-        <a href="neptune.html">Neptune</a>
-    </li>
-</ul>
+<p class="cattitle">Planets</p>
+<div class="catcenter">
+    <ul>
+        <li>
+            <a href="mercury.html">Mercury</a>
+        </li>
+        <li>
+            <a href="venus.html">Venus</a>
+        </li>
+        <li>
+            <a href="earth.html">Earth</a>
+        </li>
+        <li>
+            <a href="mars.html">Mars</a>
+        </li>
+        <li>
+            <a href="jupiter.html">Jupiter</a>
+        </li>
+        <li>
+            <a href="saturn.html">Saturn</a>
+        </li>
+        <li>
+            <a href="uranus.html">Uranus</a>
+        </li>
+        <li>
+            <a href="neptune.html">Neptune</a>
+        </li>
+    </ul>
+</div>
