Two new pages, minor JS functionality, prototype for a logo, minor changes

--- a/_includes/catnatural-satellites.html
+++ b/_includes/catnatural-satellites.html
@@ -1,4 +1,4 @@
-<p class=cattitle>Natural satellites</p>
+<p class=cattitle><a href="natural-satellite.html">Natural satellites</a></p>
 <p class="cath">Earth</p>
 <div class="subcat">
     <ul>
@@ -54,32 +54,195 @@
             </li>
         </ul>
     </div>
-    <p class="cath">Irregular moons</p>
+    <p class="cath">Himalia group</p>
+    <div class="subsubcat">
+        <ul>
+            <li>
+                Leda
+            </li>
+            <li>
+                Ersa
+            </li>
+            <li>
+                Himalia
+            </li>
+            <li>
+                Pandia
+            </li>
+            <li>
+                Lysithea
+            </li>
+            <li>
+                Elara
+            </li>
+            <li>
+                Dia
+            </li>
+            <li>
+                (2 more)
+            </li>
+        </ul>
+    </div>
+    <p class="cath">Carpo group</p>
+    <div class="subsubcat">
+        <ul>
+            <li>
+                S/2018 J 4
+            </li>
+            <li>
+                Carpo
+            </li>
+        </ul>
+    </div>
+    <p class="cath">Ananke group</p>
+    <div class="subsubcat">
+        <ul>
+            <li>
+                Euporie
+            </li>
+            <li>
+                Eupheme
+            </li>
+            <li>
+                Mneme
+            </li>
+            <li>
+                Euanthe
+            </li>
+            <li>
+                Harpalyke
+            </li>
+            <li>
+                Orthosie
+            </li>
+            <li>
+                Helike
+            </li>
+            <li>
+                Praxidike
+            </li>
+            <li>
+                Thelxinoe
+            </li>
+            <li>
+                Thyone
+            </li>
+            <li>
+                Ananke
+            </li>
+            <li>
+                Iocaste
+            </li>
+            <li>
+                Hermippe
+            </li>
+            <li>
+                (14 more)
+            </li>
+        </ul>
+    </div>
+    <p class="cath">Pasiphae group</p>
+    <div class="subsubcat">
+        <ul>
+            <li>
+                Philophrosyne
+            </li>
+            <li>
+                Eurydome
+            </li>
+            <li>
+                Hegemone
+            </li>
+            <li>
+                Pasiphae
+            </li>
+            <li>
+                Sponde
+            </li>
+            <li>
+                Megaclite
+            </li>
+            <li>
+                Cyllene
+            </li>
+            <li>
+                Sinope
+            </li>
+            <li>
+                Aoede
+            </li>
+            <li>
+                Autone
+            </li>
+            <li>
+                Callirhoe
+            </li>
+            <li>
+                Kore
+            </li>
+            <li>
+                (6 more)
+            </li>
+        </ul>
+    </div>
+    <p class="cath">Carme group</p>
+    <div class="subsubcat">
+        <ul>
+            <li>
+                Pasithee
+            </li>
+            <li>
+                Chaldene
+            </li>
+            <li>
+                Isonoe
+            </li>
+            <li>
+                Kallichore
+            </li>
+            <li>
+                Erinome
+            </li>
+            <li>
+                Kale
+            </li>
+            <li>
+                Eirene
+            </li>
+            <li>
+                Aitne
+            </li>
+            <li>
+                Eukelade
+            </li>
+            <li>
+                Arche
+            </li>
+            <li>
+                Taygete
+            </li>
+            <li>
+                Carme
+            </li>
+            <li>
+                Herse
+            </li>
+            <li>
+                Kalyke
+            </li>
+            <li>
+                (17 more)
+            </li>
+        </ul>
+    </div>
+    <p class="cath">Other irregular moons</p>
     <div class="subsubcat">
         <ul>
             <li>
                 Themisto
             </li>
             <li>
-                Himalia
-            </li>
-            <li>
-                Ananke
-            </li>
-            <li>
-                Carpo
-            </li>
-            <li>
                 Valetudo
-            </li>
-            <li>
-                Pasiphae
-            </li>
-            <li>
-                Carme
-            </li>
-            <li>
-                (82 more)
             </li>
         </ul>
     </div>
