--- a/_includes/catplanets.html
+++ b/_includes/catplanets.html
@@ -1,5 +1,6 @@
-<p class="cattitle">Planets</p>
-<div class="catcenter">
+<p class="cattitle"><a href="planet.html">Planets</a></p>
+<p class="cath">Major planets</p>
+<div class="subcat">
     <ul>
         <li>
             <a href="mercury.html">Mercury</a>
@@ -26,4 +27,196 @@
             <a href="neptune.html">Neptune</a>
         </li>
     </ul>
+</div>
+<p class="cath"><a href="dwarf-planet.html">Dwarf planets</a></p>
+<div class="subcat">
+    <p class="cath">Officially recognized</p>
+    <div class="subsubcat">
+        <ul>
+            <li>
+                <a href="pluto.html">Pluto</a>
+            </li>
+            <li>
+                <a href="eris.html">Eris</a>
+            </li>
+            <li>
+                <a href="haumea.html">Haumea</a>
+            </li>
+            <li>
+                <a href="makemake.html">Makemake</a>
+            </li>
+            <li>
+                <a href="ceres.html">Ceres</a>
+            </li>
+        </ul>
+    </div>
+    <p class="cath">Likely dwarf planets</p>
+    <div class="subsubcat">
+        <ul>
+            <li>
+                <a href="gonggong.html">Gonggong</a>
+            </li>
+            <li>
+                <a href="quaoar.html">Quaoar</a>
+            </li>
+            <li>
+                <a href="sedna.html">Sedna</a>
+            </li>
+            <li>
+                <a href="orcus.html">Orcus</a>
+            </li>
+            <li>
+                <a href="salacia.html">Salacia</a>
+            </li>
+            <li>
+                Máni
+            </li>
+            <li>
+                Achlys
+            </li>
+            <li>
+                Aya
+            </li>
+            <li>
+                Varda
+            </li>
+            <li>
+                Chiminigagua
+            </li>
+            <li>
+                Ixion
+            </li>
+            <li>
+                Goibniu
+            </li>
+            <li>
+                Ritona
+            </li>
+            <li>
+                Uni
+            </li>
+            <li>
+                Varuna
+            </li>
+            <li>
+                Rumina
+            </li>
+            <li>
+                Gǃkúnǁʼhòmdímà 	
+            </li>
+            <li>
+                2014 UZ224
+            </li>
+            <li>
+                (many less likely candidates)
+            </li>
+        </ul>
+    </div>
+</div>
+<p class="cath"><a href="exoplanet.html">Exoplanets</a> (notable examples)</p>
+<div class="subcat">
+    <p class="cath">Sub-Earths</p>
+    <div class="subsubcat">
+        <ul>
+            <li>
+                Kepler-37 b
+            </li>
+        </ul>
+    </div>
+    <p class="cath">Earths</p>
+    <div class="subsubcat">
+        <ul>
+            <li>
+                Proxima Centauri b
+            </li>
+            <li>
+                Kepler-186 f
+            </li>
+            <li>
+                TRAPPIST-1 e
+            </li>
+        </ul>
+    </div>
+    <p class="cath">Super-Earths and mini-Neptunes</p>
+    <div class="subsubcat">
+        <ul>
+            <li>
+                Janssen (55 Canrcri e)
+            </li>
+            <li>
+                Kepler-22 b
+            </li>
+        </ul>
+    </div>
+    <p class="cath">Neptunes</p>
+    <div class="subsubcat">
+        <ul>
+        </ul>
+    </div>
+    <p class="cath">Jupiters</p>
+    <div class="subsubcat">
+        <ul>
+            <li>
+                Ægir (Epsilon Eridani b)
+            </li>
+        </ul>
+    </div>
+    <p class="cath">Super-Jupiters</p>
+    <div class="subsubcat">
+        <ul>
+            <li>
+                Tadmor (Gamma Cephei Ab)
+            </li>
+            <li>
+                COCONUTS-2 b
+            </li>
+        </ul>
+    </div>
+    <p class="cath">Hot Jupiters</p>
+    <div class="subsubcat">
+        <ul>
+            <li>
+                Dimidium (51 Pegasi b)
+            </li>
+            <li>
+                Kepler-1658 b
+            </li>
+            <li>
+                WASP-12 b
+            </li>
+        </ul>
+    </div>
+    <p class="cath">Circumbinary and circumtriple planets</p>
+    <div class="subsubcat">
+        <ul>
+            <li>
+                Kepler-16 b
+            </li>
+            <li>
+                Gliese 900 b
+            </li>
+        </ul>
+    </div>
+    <p class="cath">Pulsar planets</p>
+    <div class="subsubcat">
+        <ul>
+            <li>
+                Draugr (PSR B1257+12 b)
+            </li>
+            <li>
+                Poltergeist (PSR B1257+12 c)
+            </li>
+            <li>
+                Phobetor (PSR B1257+12 d)
+            </li>
+        </ul>
+    </div>
+    <p class="cath">Rogue planets</p>
+    <div class="subsubcat">
+        <ul>
+            <li>
+                OGLE-2016-BLG-1928
+            </li>
+        </ul>
+    </div>
 </div>
