--- a/_includes/tocstar.html
+++ b/_includes/tocstar.html
@@ -5,8 +5,50 @@
     <a href="#LifeCycle">Life cycle</a>
 </li>
 <li>
-    <a href="#Classification">Classification</a>
+    <a href="#SpectralClassification">Spectral classification</a>
 </li>
+<li>
+    <a href="#SpecialTypes">Special types</a>
+    <ul class="subtoc">
+        <li>
+            <a href="#Giants">Giants</a>
+        </li>
+        <li>
+            <a href="#Supergiants">Supergiants</a>
+        </li>
+        <li>
+            <a href="#Subdwarfs">Subdwarfs</a>
+        </li>
+        <li>
+            <a href="#WolfRayetStars">Wolf-Rayet stars</a>
+        </li>
+        <li>
+            <a href="#TTauriStars">T Tauri Stars</a>
+        </li>
+    </ul>
+</li>
+<li>
+    <a href="#StarRemnants">Star remnants</a>
+    <ul class="subtoc">
+        <li>
+            <a href="#WhiteDwarfs">White dwarfs</a>
+        </li>
+        <li>
+            <a href="#NeutronStars">Neutron stars</a>
+        </li>
+        <li>
+            <a href="#Pulsars">Pulsars</a>
+        </li>
+        <li>
+            <a href="#BlackHoles">Black holes</a>
+        </li>
+    </ul>
+</li>
+
+
+
+
+
 <li>
     <a href="#ExternalLinks">External links</a>
 </li>
