--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <meta name="description" content="Geography of the planets">
         <meta name="keywords" content="gabrova, asteroid, space, solar system, planet, exoplanet, moon, dwarf planet, geography">
+        <script src="../main.js" defer></script>
     </head>
     <body>
 
@@ -17,6 +18,7 @@
             <ul class="navigationmenu">
                 <li class=navlogo>
                     <img src="{% if page.dir == "/pages/" %}../{% endif %}assets/logo.png" alt="LOGO">
+                    <p>Gabrova</p>
                 </li>
                 <li class="navbutton">
                     <a class="navlink" href="{% if page.dir == "/pages/" %}../{% endif %}index.html">Home</a>
