Five new pages, updated Jupiter and Saturn, minor edits and corrections

--- a/_includes/catlargest-asteroids.html
+++ b/_includes/catlargest-asteroids.html
@@ -1,4 +1,4 @@
-<p class="cattitle">Largest <a href=".html">asteroids</a> (over 200 km in diameter)</p>
+<p class="cattitle">Largest <a href="asteroid.html">asteroids</a> (over 200 km in diameter)</p>
 <p class="cath">Over 500 km</p>
 <div class="subcat">
     <ul>
