--- a/_includes/catnatural-satellites.html
+++ b/_includes/catnatural-satellites.html
@@ -341,7 +341,7 @@
                 Ijiraq
             </li>
             <li>
-                Paaliq
+                Paaliaq
             </li>
             <li>
                 Tarqeq
