--- a/_includes/toceuropa.html
+++ b/_includes/toceuropa.html
@@ -17,7 +17,7 @@
             <a href="#InternalStructure">Internal structure</a>
         </li>
         <li>
-            <a href="#InternalStructure">Subsurface ocean</a>
+            <a href="#SubsurfaceOcean">Subsurface ocean</a>
         </li>
         <li>
             <a href="#ExternalStructure">External structure</a>
