--- a/_includes/tocgonggong.html
+++ b/_includes/tocgonggong.html
@@ -14,12 +14,12 @@
             <a href="#Size">Size</a>
         </li>
         <li>
-            <a href="#InternalStructure">Internal structure</a>
-        </li>
-        <li>
-            <a href="#ExternalStructure">External structure</a>
+            <a href="#Structure">Structure</a>
         </li>
     </ul>
+</li>
+<li>
+    <a href="#Satellite">Satellite</a>
 </li>
 <li>
     <a href="#Exploration">Exploration</a>
