--- a/_includes/tochyperion.html
+++ b/_includes/tochyperion.html
@@ -11,7 +11,7 @@
     <a href="#PhysicalCharacteristics">Physical characteristics</a>
     <ul class="subtoc">
         <li>
-            <a href="#Size">Size</a>
+            <a href="#SizeAndShape">Size and shape</a>
         </li>
         <li>
             <a href="#InternalStructure">Internal structure</a>
