--- a/_includes/tocjupiter.html
+++ b/_includes/tocjupiter.html
@@ -3,6 +3,17 @@
 </li>
 <li>
     <a href="#OrbitAndRotation">Orbit and rotation</a>
+    <ul class="subtoc">
+        <li>
+            <a href="#Trojans">Trojans</a>
+        </li>
+        <li>
+            <a href="#OherResonances">Other resonances</a>
+        </li>
+        <li>
+            <a href="#CometInteractions">Comet interactions</a>
+        </li>
+    </ul>
 </li>
 <li>
     <a href="#PhysicalCharacteristics">Physical characteristics</a>
@@ -15,6 +26,9 @@
         </li>
         <li>
             <a href="#Atmosphere">Atmosphere</a>
+        </li>
+        <li>
+            <a href="#Magnetosphere">Magnetosphere</a>
         </li>
         <li>
             <a href="#Rings">Rings</a>
@@ -40,9 +54,6 @@
             <a href="#InnerMoons">Inner moons</a>
         </li>
     </ul>
-</li>
-<li>
-    <a href="#Trojans">Trojans</a>
 </li>
 <li>
     <a href="#EarlyObservations">Early observations</a>
