--- a/_includes/tocsaturn.html
+++ b/_includes/tocsaturn.html
@@ -17,6 +17,9 @@
             <a href="#Atmosphere">Atmosphere</a>
         </li>
         <li>
+            <a href="#Magnetosphere">Magnetosphere</a>
+        </li>
+        <li>
             <a href="#RingSystem">Ring system</a>
         </li>
     </ul>
@@ -25,25 +28,10 @@
     <a href="#Satellites">Satellites</a>
     <ul class="subtoc">
         <li>
-            <a href="#Titan">Titan</a>
+            <a href="#OuterMajorMoons">Outer major moons</a>
         </li>
         <li>
-            <a href="#Rhea">Rhea</a>
-        </li>
-        <li>
-            <a href="#Iapetus">Iapetus</a>
-        </li>
-        <li>
-            <a href="#Dione">Dione</a>
-        </li>
-        <li>
-            <a href="#Tethys">Tethys</a>
-        </li>
-        <li>
-            <a href="#Enceladus">Enceladus</a>
-        </li>
-        <li>
-            <a href="#Mimas">Mimas</a>
+            <a href="#InnerMajorMoons">Inner major moons</a>
         </li>
         <li>
             <a href="#OtherRegularMoons">Other regular moons</a>
