--- a/_includes/tocsedna.html
+++ b/_includes/tocsedna.html
@@ -6,6 +6,11 @@
 </li>
 <li>
     <a href="#OrbitAndRotation">Orbit and rotation</a>
+    <ul class="subtoc">
+        <li>
+            <a href="#CluesForPlanetNine">Clues for Planet Nine</a>
+        </li>
+    </ul>
 </li>
 <li>
     <a href="#PhysicalCharacteristics">Physical characteristics</a>
@@ -14,10 +19,7 @@
             <a href="#Size">Size</a>
         </li>
         <li>
-            <a href="#InternalStructure">Internal structure</a>
-        </li>
-        <li>
-            <a href="#ExternalStructure">External structure</a>
+            <a href="#Structure">Structure</a>
         </li>
     </ul>
 </li>
