--- a/_includes/tocquaoar.html
+++ b/_includes/tocquaoar.html
@@ -14,12 +14,15 @@
             <a href="#Size">Size</a>
         </li>
         <li>
-            <a href="#InternalStructure">Internal structure</a>
-        </li>
-        <li>
-            <a href="#ExternalStructure">External structure</a>
+            <a href="#Structure">Structure</a>
         </li>
     </ul>
+</li>
+<li>
+    <a href="#satellite">Satellite</a>
+</li>
+<li>
+    <a href="#Rings">Rings</a>
 </li>
 <li>
     <a href="#Exploration">Exploration</a>
