Five new pages, minor edits

--- a/_includes/catlargest-asteroids.html
+++ b/_includes/catlargest-asteroids.html
@@ -20,10 +20,10 @@
             <a href="hygiea.html">10 Hygiea</a>
         </li>
         <li>
-            704 Interamnia
+            <a href="interamnia.html">704 Interamnia</a>
         </li>
         <li>
-            52 Europa
+            <a href="europa-asteroid.html">52 Europa</a>
         </li>
     </ul>
 </div>
@@ -31,61 +31,61 @@
 <div class="subcat">
     <ul>
         <li>
-            511 Davida
+            <a href="davida.html">511 Davida</a>
         </li>
         <li>
-            87 Sylvia
+            <a href="sylvia.html">87 Sylvia</a>
         </li>
         <li>
-            15 Eunomia
+            <a href="eunomia.html">15 Eunomia</a>
         </li>
         <li>
-            31 Euphrosyne
+            <a href="euphrosyne.html">31 Euphrosyne</a>
         </li>
         <li>
-            65 Cybele
+            <a href="cybele.html">65 Cybele</a>
         </li>
         <li>
-            624 Hektor
+            <a href="hektor.html">624 Hektor</a>
         </li>
         <li>
-            3 Juno
+            <a href="juno-asteroid.html">3 Juno</a>
         </li>
         <li>
-            451 Patientia
+            <a href="patientia.html">451 Patientia</a>
         </li>
         <li>
-            107 Camilla
+            <a href="camilla.html">107 Camilla</a>
         </li>
         <li>
-            324 Bamberga
+            <a href="bamberga.html">324 Bamberga</a>
         </li>
         <li>
-            16 Psyche
+            <a href="psyche.html">16 Psyche</a>
         </li>
         <li>
-            88 Thisbe
+            <a href="thisbe.html">88 Thisbe</a>
         </li>
         <li>
-            48 Doris
+            <a href="doris.html">48 Doris</a>
         </li>
         <li>
-            19 Fortuna
+            <a href="fortuna.html">19 Fortuna</a>
         </li>
         <li>
-            121 Hermione
+            <a href="hermione.html">121 Hermione</a>
         </li>
         <li>
-            24 Themis
+            <a href="themis.html">24 Themis</a>
         </li>
         <li>
-            94 Aurora
+            <a href="aurora.html">94 Aurora</a>
         </li>
         <li>
-            29 Amphitrite
+            <a href="amphitrite.html">29 Amphitrite</a>
         </li>
         <li>
-            13 Egeria
+            <a href="egeria.html">13 Egeria</a>
         </li>
     </ul>
 </div>
