--- a/_includes/catminor-planets.html
+++ b/_includes/catminor-planets.html
@@ -53,7 +53,7 @@
                 ꞌAylóꞌchaxnim group
             </li>
             <li>
-                Terrestrial planet trojans (Venus
+                Terrestrial planet <a href="trojan.html">trojans</a> (Venus
             </li>
             <li>
                 Earth
@@ -83,7 +83,7 @@
             Damocloids
         </li>
         <li>
-            Outer trojans (Saturn
+            Outer <a href="trojan.html">trojans</a> (Saturn
         </li>
         <li>
             Uranus
