--- a/_includes/tocasteroid-belt.html
+++ b/_includes/tocasteroid-belt.html
@@ -22,5 +22,8 @@
     </ul>
 </li>
 <li>
+    <a href="#Exploration">Exploration</a>
+</li>
+<li>
     <a href="#ExternalLinks">External links</a>
 </li>
