--- a/assets/style.css
+++ b/assets/style.css
@@ -70,18 +70,35 @@ a[href='proteus.html'],
 a[href='dysnomia.html'],
 a[href='orcus.html'],
 a[href='salacia.html'],
-a[href='pallas.html'],
-a[href='hygiea.html'],
 a[href='halley.html'],
-a[href='trojan.html'],
-a[href='nea.html'],
 a[href='nebula.html'],
 a[href='black-hole.html'],
-a[href='constellation.html']{
+a[href='interamnia.html'],
+a[href='europa-asteroid.html'],
+a[href='davida.html'],
+a[href='sylvia.html'],
+a[href='eunomia.html'],
+a[href='euphrosyne.html'],
+a[href='cybele.html'],
+a[href='hektor.html'],
+a[href='juno-asteroid.html'],
+a[href='patientia.html'],
+a[href='camilla.html'],
+a[href='bamberga.html'],
+a[href='psyche.html'],
+a[href='thisbe.html'],
+a[href='doris.html'],
+a[href='fortuna.html'],
+a[href='hermione.html'],
+a[href='themis.html'],
+a[href='aurora.html'],
+a[href='amphitrite.html'],
+a[href='egeria.html']{
     color:lightsalmon;
 }
 .readmore{
     margin-left:2em;
+    font-style:italic;
 }
 
 /* Navigation */
@@ -318,6 +335,9 @@ aside{
         width:95%;
         font-size:10px;
     }
+    .columns{
+        column-count:2;
+    }
 }
 @media only screen and (min-width:561px) and (max-width:1200px){
     .maincolumn{
@@ -352,6 +372,9 @@ aside{
     }
     table{
         font-size:13px;
+    }
+    .columns{
+        column-count:3;
     }
 }
 @media only screen and (min-width:1201px){
@@ -391,6 +414,9 @@ aside{
     }
     table{
         font-size:16px;
+    }
+    .columns{
+        column-count:4;
     }
 }
 .maincolumn{
