9 new asteroid pages

--- a/_includes/toctrojan.html
+++ b/_includes/toctrojan.html
@@ -2,10 +2,16 @@
     <a href="#Discovery">Discovery</a>
 </li>
 <li>
+    <a href="#Orbits">Orbits</a>
+</li>
+<li>
     <a href="#JupiterTrojans">Jupiter trojans</a>
 </li>
 <li>
     <a href="#OtherTrojans">Other trojans</a>
+</li>
+<li>
+    <a href="#TrojanMoons">Trojan moons</a>
 </li>
 <li>
     <a href="#Exploration">Exploration</a>
