--- a/assets/style.css
+++ b/assets/style.css
@@ -85,7 +85,6 @@ a[href='juno-asteroid.html'],
 a[href='patientia.html'],
 a[href='camilla.html'],
 a[href='bamberga.html'],
-a[href='psyche.html'],
 a[href='thisbe.html'],
 a[href='doris.html'],
 a[href='fortuna.html'],
@@ -93,7 +92,18 @@ a[href='hermione.html'],
 a[href='themis.html'],
 a[href='aurora.html'],
 a[href='amphitrite.html'],
-a[href='egeria.html']{
+a[href='egeria.html'],
+a[href='annefrank.html'],
+a[href='steins.html'],
+a[href='toutatis.html'],
+a[href='ryugu.html'],
+a[href='bennu.html'],
+a[href='dinkinesh.html'],
+a[href='donaldjohanson.html'],
+a[href='torifune.html'],
+a[href='kamooalewa.html'],
+a[href='apophis.html'],
+a[href='patroclus.html']{
     color:lightsalmon;
 }
 .readmore{
