A bunch of asteroids

--- a/_includes/catnatural-satellites.html
+++ b/_includes/catnatural-satellites.html
@@ -297,10 +297,10 @@
                 Pandora
             </li>
             <li>
-                Epimetheus
+                <a href="epimetheus.html">Epimetheus</a>
             </li>
             <li>
-                Janus
+                <a href="janus.html">Janus</a>
             </li>
             <li>
                 Aegaon
