--- a/assets/style.css
+++ b/assets/style.css
@@ -64,24 +64,25 @@ a:link{
 a:visited{
     color:mediumpurple;
 }
+a[href='eunomia.html'],
+a[href='cybele.html'],
+a[href='hektor.html'],
+a[href='juno-asteroid.html'],
 a[href='amalthea.html'],
+a[href='janus.html'],
+a[href='epimetheus.html'],
 a[href='puck.html'],
 a[href='proteus.html'],
 a[href='dysnomia.html'],
 a[href='orcus.html'],
 a[href='salacia.html'],
 a[href='halley.html'],
+a[href='interstellar-object.html'],
 a[href='nebula.html'],
 a[href='black-hole.html'],
-a[href='interamnia.html'],
-a[href='europa-asteroid.html'],
 a[href='davida.html'],
 a[href='sylvia.html'],
-a[href='eunomia.html'],
 a[href='euphrosyne.html'],
-a[href='cybele.html'],
-a[href='hektor.html'],
-a[href='juno-asteroid.html'],
 a[href='patientia.html'],
 a[href='camilla.html'],
 a[href='bamberga.html'],
@@ -93,16 +94,8 @@ a[href='themis.html'],
 a[href='aurora.html'],
 a[href='amphitrite.html'],
 a[href='egeria.html'],
-a[href='annefrank.html'],
-a[href='steins.html'],
-a[href='toutatis.html'],
-a[href='ryugu.html'],
-a[href='bennu.html'],
-a[href='dinkinesh.html'],
-a[href='donaldjohanson.html'],
-a[href='torifune.html'],
-a[href='kamooalewa.html'],
-a[href='apophis.html'],
+a[href='justitia.html'],
+a[href='phaethon.html'],
 a[href='patroclus.html']{
     color:lightsalmon;
 }
